fix photo overflow

--- a/public/raw-stylesheets/partials/_post.scss
+++ b/public/raw-stylesheets/partials/_post.scss
@@ -2,6 +2,7 @@ article.post {
   background: var(--element-bg-color);
   max-width: 600px;
   border-radius: 2px;
+  overflow: hidden;
 }
 
 .post__main-image {
@@ -10,7 +11,7 @@ article.post {
 }
 
 .post__main-image img {
-  width: 99.6%;
+  width: 100%;
 }
 
 .post__header {
